--- a/integrador.html
+++ b/integrador.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ES">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,47 +8,56 @@
     <title>Integrador</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-<header>
-    <div class="logoNombre">
-    <img src="css/multimedia/branding/isotype.svg" alt="Logoheader" width="80.24" >
-    <p>FUNKSHOP</p>
-    </div>
-<nav> 
-    <li>
-        <ul>SHOP<ul>
-        <ul>CONTACTO</ul> 
-        <ul>LOGIC</ul>    
-        <ul>CONTACTO</ul>
-    </li>
-</nav>
 
-</header>
-<div class="banner">
-    <img src="css/multimedia/funkos-banner.webp" alt="bannerFunko">
-</div>
-<main>
-    <section>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia nesciunt, facere, obcaecati repellendus voluptatem quisquam culpa deserunt quod sunt dolor nostrum nihil laudantium velit ullam ratione molestiae commodi temporibus porro!</section>
-    <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta aliquam, et hic ipsa architecto, tenetur amet incidunt quam molestias, nihil itaque fugiat rem vero dignissimos pariatur officia. Voluptatibus, alias animi?</section>
-    <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque deserunt laboriosam natus adipisci inventore expedita, ipsa voluptas. Ab excepturi consequuntur doloribus tenetur officiis perspiciatis facilis! Placeat doloremque eius iste debitis.</section>
-    <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur labore id eum enim, eveniet repellendus ullam facere, maxime laborum ex explicabo ducimus reiciendis iusto est accusantium in corporis a? Suscipit!</section>
-</main>
-<footer>
-    <li>
-        <ul>
-            SHOP
-        <ul>
-            CONTACTO
-        </ul>  
-    
-        <ul>
-            LOGIN
-        </ul>  
-        <ul>
-            CARRO
-        </ul>  
+<body>
+    <header>
+        <div class="logoNombre">
+            <img src="css/multimedia/branding/logo_light_horizontal.svg" alt="Logoheader" width="80.24">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Login</a></li>
+                <li><img src="css/multimedia/icons/cart-icon.svg" alt="Carrito"></a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <div class="banner">
+        <img src="css/multimedia/funkos-banner.webp" alt="bannerFunko">
+    </div>
+    <main>
+        <section>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia nesciunt, facere, obcaecati
+            repellendus voluptatem quisquam culpa deserunt quod sunt dolor nostrum nihil laudantium velit ullam ratione
+            molestiae commodi temporibus porro!</section>
+        <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta aliquam, et hic ipsa architecto,
+            tenetur amet incidunt quam molestias, nihil itaque fugiat rem vero dignissimos pariatur officia.
+            Voluptatibus, alias animi?</section>
+        <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque deserunt laboriosam natus adipisci
+            inventore expedita, ipsa voluptas. Ab excepturi consequuntur doloribus tenetur officiis perspiciatis
+            facilis! Placeat doloremque eius iste debitis.</section>
+        <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur labore id eum enim, eveniet
+            repellendus ullam facere, maxime laborum ex explicabo ducimus reiciendis iusto est accusantium in corporis
+            a? Suscipit!</section>
+    </main>
+    <footer>
+        <li>
+            <ul>
+                SHOP
+                <ul>
+                    CONTACTO
+                </ul>
+
+                <ul>
+                    LOGIN
+                </ul>
+                <ul>
+                    CARRO
+                </ul>
         </li>
-        <img src="css/multimedia/branding/isotype.svg" alt="Logoheader" width="80.24" >
-</footer>
+        <img src="css/multimedia/branding/isotype.svg" alt="Logoheader" width="80.24">
+    </footer>
 </body>
+
 </html>
